...
    } finally {
      setRefreshing(false);
    }
  }

  return (
    <Screen testID="screen-person" refreshing={refreshing} onRefresh={() => void onRefresh()}>
      <Stack.Screen
        options={{
          title: person?.full_name ?? 'User',
          headerRight:
            person && isAdmin
              ? () => (
...
